v142
(xx/01/17)

Changes / Improvements / Optimizations:

Bug fixes:

-----------------------------------------------------------------------------------------------------------

v141
(31/12/16)

Images:
NanoPi NEO | This image has been updated to kernel 4.9, appears more stable to 3.x. Also fixes a few issues relating to USB WiFi and i2c errors: https://github.com/Fourdee/DietPi/issues/667
NanoPi NEO Air | This image has been updated to kernel 4.9, appears more stable to 3.x. Also fixes a few issues relating to onboard WiFi, USB WiFi and i2c errors. Many thanks to @zador-blood-stained at ARMbian to help make this possible: https://github.com/Fourdee/DietPi/issues/640

Changes / Improvements / Optimizations:
DietPi-Software | Reduced the verbosity of onscreen text during apt installations.
DietPi-Software | PiHole: Web interface password is now set during install (default dietpi): https://github.com/Fourdee/DietPi/issues/662
DietPi-Software | UrBackup Server: Updated to latest version (2.0.38). Applies to new installations only: https://github.com/Fourdee/DietPi/issues/657

Bug fixes:
DietPi-Automation | Resolved an issue where static IPs were not being applied during 1st run dietpi-update stage. This fix applies to v140 and higher images: https://github.com/Fourdee/DietPi/issues/660
DietPi-Software | Resolved an issue where the DietPi installed version of Chromium was being overwritten by Debian repo during dist-upgrade: https://github.com/Fourdee/DietPi/issues/658
DietPi-Software | Resolved an issue where custom global password ('AUTO_Global_Password=') was not being used as MySQL login password, causing MySQL DB creations to fail: https://github.com/Fourdee/DietPi/issues/666
DietPi-Software | Resolved an issue where LMS failed to installed on Odroid C2: https://github.com/Fourdee/DietPi/issues/663