@@ -307,7 +307,7 @@
 					fi
 
 					WHIP_TITLE='DietPi - LCD Panel'
-					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Choose an option" --default-item "$lcdpanel_text" --cancel-button "$TEXT_MENU_BACK" 12 60 3 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
+					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Choose an option" --default-item "$lcdpanel_text" --cancel-button "$TEXT_MENU_BACK" 14 60 5 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
 
 					CHOICE=$?
 					if (( $CHOICE == 0 )); then
@@ -3459,81 +3459,64 @@ _EOF_
 
 				WHIP_TITLE='DietPi - Soundcards'
 
-				#RPI
+				whiptail_menu_array=()
+
+				# - Global:
+				#	RPI, none disables HDMI aswell.
 				if (( $HW_MODEL < 10 )); then
 
-					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Current : $soundcard_current" --default-item "$soundcard_current" --cancel-button "$TEXT_MENU_BACK" 18 95 10 \
-					"none" "Disables HDMI + Analogue" \
-					"rpi-bcm2835" "HDMI (if plugged in, else 3.5mm)" \
-					"rpi-bcm2835-ultrahq" "HDMI (if plugged in, else 3.5mm)" \
-					"justboom-dac" "JustBoom: DAC HAT, Amp HAT, DAC Zero and Amp Zero" \
-					"justboom-digi" "JustBoom: Digi HAT and Digi Zero" \
-					"allo-piano-dac-pcm512x-audio" "Allo Piano DAC's" \
-					"hifiberry-dac" "HifiBerry DAC" \
-					"hifiberry-dacplus" "HifiBerry DAC+" \
-					"hifiberry-digi" "HifiBerry DIGI / DIGI+" \
-					"hifiberry-amp" "HifiBerry AMP / AMP+" \
-					"iqaudio-dacplus" "Pi-DAC+, Pi-DACZero, Pi-DAC Pro, Pi-DigiAMP+" \
-					"iqaudio-dacplus,auto_mute_amp" "Pi-DigiAMP+" \
-					"iqaudio-dacplus,unmute_amp" "Pi-DigiAMP+" 3>&1 1>&2 2>&3)
-
-					CHOICE=$?
-					if (( $CHOICE == 0 )); then
-
-						/DietPi/dietpi/func/dietpi-set_hardware soundcard "$OPTION"
-						REBOOT_REQUIRED=1
-
-					fi
-
-				#C1/C2
-				elif (( $HW_MODEL == 10 || $HW_MODEL == 12 )); then
-
-					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Current : $soundcard_current" --default-item "$soundcard_current" --cancel-button "$TEXT_MENU_BACK" 13 60 3 \
-					"none" "HDMI (Default)" \
-					"odroid-hifishield-plus" "Odroid HiFi Shield" \
-					"odroid-hifishield-2" "Odroid HiFi Shield 2" 3>&1 1>&2 2>&3)
-
-					CHOICE=$?
-					if (( $CHOICE == 0 )); then
-
-						/DietPi/dietpi/func/dietpi-set_hardware soundcard "$OPTION"
-						REBOOT_REQUIRED=1
-
-					fi
-
-				#BPi Pro
-				elif (( $HW_MODEL == 51 )); then
-
-					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Current : $soundcard_current" --default-item "$soundcard_current" --cancel-button "$TEXT_MENU_BACK" 13 60 2 \
-					"none" "HDMI (Default)" \
-					"bpipro-analogue" "3.5mm analogue" 3>&1 1>&2 2>&3)
-
-					CHOICE=$?
-					if (( $CHOICE == 0 )); then
-
-						/DietPi/dietpi/func/dietpi-set_hardware soundcard "$OPTION"
-						REBOOT_REQUIRED=1
-
-					fi
-
-				#H3
-				elif (( $HW_CPUID == 1 )); then
-
-					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Current : $soundcard_current" --default-item "$soundcard_current" --cancel-button "$TEXT_MENU_BACK" 13 60 2 \
-					"H3-hdmi" "HDMI" \
-					"H3-analogue" "3.5mm analogue" 3>&1 1>&2 2>&3)
-
-					CHOICE=$?
-					if (( $CHOICE == 0 )); then
-
-						/DietPi/dietpi/func/dietpi-set_hardware soundcard "$OPTION"
-						REBOOT_REQUIRED=1
-
-					fi
+					whiptail_menu_array+=("none" "Disables HDMI + 3.5mm Analogue")
 
 				else
 
-					Info_HW_OptionNotSupported
+					whiptail_menu_array+=("none" "HDMI")
+
+				fi
+
+				whiptail_menu_array+=("usb-dac" "USB Audio DAC (any)")
+
+				# - RPI
+				if (( $HW_MODEL < 10 )); then
+
+					whiptail_menu_array+=("rpi-bcm2835" "HDMI (if plugged in, else 3.5mm)")
+					whiptail_menu_array+=("rpi-bcm2835-ultrahq" "HDMI (if plugged in, else 3.5mm)")
+					whiptail_menu_array+=("justboom-dac" "JustBoom: DAC HAT, Amp HAT, DAC Zero and Amp Zero")
+					whiptail_menu_array+=("justboom-digi" "JustBoom: Digi HAT and Digi Zero")
+					whiptail_menu_array+=("allo-piano-dac-pcm512x-audio" "Allo Piano DAC's")
+					whiptail_menu_array+=("hifiberry-dac" "HifiBerry DAC")
+					whiptail_menu_array+=("hifiberry-dacplus" "HifiBerry DAC+")
+					whiptail_menu_array+=("hifiberry-digi" "HifiBerry DIGI / DIGI+")
+					whiptail_menu_array+=("hifiberry-amp" "HifiBerry AMP / AMP+")
+					whiptail_menu_array+=("iqaudio-dacplus" "Pi-DAC+, Pi-DACZero, Pi-DAC Pro, Pi-DigiAMP+")
+					whiptail_menu_array+=("iqaudio-dacplus,auto_mute_amp" "Pi-DigiAMP+")
+					whiptail_menu_array+=("iqaudio-dacplus,unmute_amp" "Pi-DigiAMP+")
+
+				# - C1/C2
+				elif (( $HW_MODEL == 10 || $HW_MODEL == 12 )); then
+
+					whiptail_menu_array+=("odroid-hifishield-plus" "Odroid HiFi Shield 1/Plus")
+					whiptail_menu_array+=("odroid-hifishield-2" "Odroid HiFi Shield 2")
+
+				# - BPi Pro
+				elif (( $HW_MODEL == 51 )); then
+
+					whiptail_menu_array+=("bpipro-analogue" "3.5mm analogue")
+
+				# - H3
+				elif (( $HW_CPUID == 1 )); then
+
+					whiptail_menu_array+=("H3-analogue" "3.5mm analogue")
+
+				fi
+
+				OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Current : $soundcard_current" --default-item "$soundcard_current" --cancel-button "$TEXT_MENU_BACK" 18 90 10 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
+				CHOICE=$?
+				unset whiptail_menu_array
+
+				if (( $CHOICE == 0 )); then
+
+					/DietPi/dietpi/func/dietpi-set_hardware soundcard "$OPTION"
+					REBOOT_REQUIRED=1
 
 				fi
 
