@@ -1340,6 +1340,39 @@ _EOF_
 		#Cards
 		case "$INPUT_DEVICE_VALUE" in
 
+			#ALL: ----------------------------------------------------------------------
+			usb-dac)
+
+				if (( ! $(dpkg --get-selections | grep -ci -m1 '^alsa-utils') )); then
+
+					/DietPi/dietpi/func/dietpi-notify 2 "Installing alsa-utils. Please wait..."
+					apt-get install -y alsa-utils
+					if (( $? != 0 )); then
+
+						/DietPi/dietpi/func/dietpi-notify 1 "Unable to install alsa-utils."
+
+					fi
+
+				fi
+
+				# - detect card
+				local usb_detection_card_index=$(aplay -l | grep -m1 'USB Audio' | awk '{print $2}' | sed 's/://g')
+				if [[ $usb_detection_card_index =~ ^-?[0-9]+$ ]]; then
+
+					SOUNDCARD_TARGET_CARD=$usb_detection_card_index
+
+				# - Not found
+				else
+
+					/DietPi/dietpi/func/dietpi-notify 1 "Unable to find a USB-DAC on system."
+					EXIT_CODE=1
+
+				fi
+
+				SOUNDCARD_TARGET_DEVICE=0
+
+			;;
+
 			#RPi -------------------------------------------------------------------------------
 
 			#rpi-bcm2835
