@@ -68,7 +68,7 @@
 	#	deb security repo now has a forced https redirect, which requires apt-transport-https to be installed, but is only installable from deb security repo........
 	if (( $EMR_INDEX == 0 )); then
 
-		if (( ! $(dpkg -l | grep -ci -m1 '^apt-transport-https') )); then
+		if (( ! $(dpkg --get-selections | grep -ci -m1 '^apt-transport-https') )); then
 
 			apt-get install -y apt-transport-https
 			if (( $? != 0 )); then
@@ -2102,17 +2102,12 @@ _EOF_
 		#Apt-transport install by default on all systems:
 		apt-get install -y apt-transport-https
 		#-------------------------------------------------------------------------------
-		#Deb multimedia repo left on C2 image, remove for fresh installs only
-		if [ ! -f /DietPi/dietpi/.installed ]; then
-
-			rm /etc/apt/sources.list.d/deb-multimedia.list
-
-		fi
-		#-------------------------------------------------------------------------------
 
 	elif (( $VERSION_CURRENT == 141 )); then
 		#-------------------------------------------------------------------------------
-		echo 0
+		#Deb multimedia repo left on C2 image, remove for ALL installs: https://github.com/Fourdee/DietPi/issues/677
+		#	debmultimedia.list is used by dietpi-software.
+		rm /etc/apt/sources.list.d/deb-multimedia.list &> /dev/null
 		#-------------------------------------------------------------------------------
 
 	fi
