@@ -2,6 +2,7 @@ v142
 (xx/01/17)
 
 Changes / Improvements / Optimizations:
+DietPi-Config | Audio > Sound card: Added support for selecting USB-DAC sound cards: https://github.com/Fourdee/DietPi/issues/683
 
 Bug fixes:
 
